perf: replace fixed thread pool with virtual threads (Java 21)
Virtual threads are ideal for I/O-bound file parsing, eliminate pool
sizing concerns, and are lightweight enough for per-task spawning.